Fix alignment issues caused by fixed table width
Remove "table width = 100%" which caused alignment issues with current version of HN

--- a/DarkHacker.css
+++ b/DarkHacker.css
@@ -4,7 +4,6 @@ body {
 
 table {
   background-color: #262626;
-  width: 100%;
 }
 
 /* Row Formatting, works on all front page  */
